zeit.content.cp changes
=======================

0.5 (2009-05-08)
----------------

Neue Funktionen
---------------

- Validierungsregeln: Die unter
  http://zip6.zeit.de:9000/cms/forms/centerpage-validation-rules.py abgelegten
  Regeln werden auf die CenterPage angewandt. Fehler werden rot, Warnungen
  gelb. Gibt es einen fehlerhaften Bereich, kann die CP nicht veröffentlicht
  werden.

- Für die Teaserleiste kann nun das Layout MR (einspaltiger Werbeblock),
  DMR (zweispaltiger Werbeblock) und normal (keine Werbung) ausgewählt werden
  (#5001).


0.4 (2009-04-30)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~

- Wird ein Objekt auf einem Autopilot-Block fallgen gelassen wird der Autopilot
  automatisch ausgeschaltet.

- Landefläche für Teaser in der Aufmacherfläche (#4883): Fallen lassen eines
  Content-Objekts bewirkt das Anlegen eines Teaser-Blocks mit dem Objekt und
  seinen Relateds.

- Beim Bearbeiten von Teasern können nun »freie Teaser« erzeugt werden. (#4788)

- Regeln für Layouts von Teaserlisten (#5033): Der erste Block bekommt das
  Layout mit dem großen Bild, alle anderen das Layout mit dem kleinen Bild.

- Beim Einchecken der Centerpage werden die Metadaten der referenzierten
  Artikel aktualisiert. (#4976)

- Umsortieren von Blöcken in der Aufmacher- und Informatives-Fläche (#5046).

Beseitigte Fehler
~~~~~~~~~~~~~~~~~

- Editor scrollt nicht mehr nach oben, wenn man etwas getan hat (fixes #5018).

- Nach geöffneter Lightbox ging Drag'n'Drop nicht mehr (fixes #5019).


0.3 (2009-04-23)
----------------

- Bearbeiten von Teasern in der CP (#4806).

- zeit.find integriert

- Löschen von Teaserleisten nach dem Verschieben funktioniert wieder (fixes
  #4999)

- Autopilot

- Layouts für Teaserblöcke


0.2 (2009-04-17)
----------------

- Teaser-Liste kann mit Teasern befüllt werden.

- Highlight der Boxen bei Mouse-Over.

- Sortieren von Teaserleisten (#4776).

- Löschen von Teasern aus der Teaserliste (#4805).
